[gd_scene load_steps=4 format=3 uid="uid://cspme4b3db000"]

[ext_resource type="Script" uid="uid://bdueqs7dajdmi" path="res://game/core/scenes/pawn/all_pawn_info_ui.gd" id="1_hsac2"]
[ext_resource type="PackedScene" uid="uid://c3tavarpfg1tw" path="res://game/core/scenes/pawn/pawn_info_ui.tscn" id="2_02dcj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_02dcj"]

[node name="AllPawnInfoUI" type="PanelContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -102.0
offset_bottom = 134.0
grow_horizontal = 0
script = ExtResource("1_hsac2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SwitchPawnButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ButtonPrevious" type="Button" parent="VBoxContainer/SwitchPawnButtonContainer"]
layout_mode = 2
text = "前"

[node name="Control" type="Control" parent="VBoxContainer/SwitchPawnButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonNext" type="Button" parent="VBoxContainer/SwitchPawnButtonContainer"]
layout_mode = 2
text = "后"

[node name="PawnInfoUI" parent="VBoxContainer" instance=ExtResource("2_02dcj")]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_02dcj")

[connection signal="pressed" from="VBoxContainer/SwitchPawnButtonContainer/ButtonPrevious" to="." method="_on_previous"]
[connection signal="pressed" from="VBoxContainer/SwitchPawnButtonContainer/ButtonNext" to="." method="_on_next"]
